# pappasam.github.io

./: .gitignore  .gitmodules  404.html  CNAME  Makefile  README.md  archives.html  authors.html  back-2025.html  categories.html  coc-plugin.html  code-execution.html  cool-things-in-vim.html  docker-python-install-wheels.html  ignore-git.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  python-function-pipelines.html  requirements.txt  search.html  serve.sh  sitemap.txt  sitemap.xml  tags.html  tipuesearch_content.js  tipuesearch_content.json  vim-line-numbers.html
author/: samuel-roeca.html
category/: announcements.html  docker.html  software-development.html  tech.html  technology.html  vim.html
content/: first_post.md
content/Vim/: 2018-04-05_cool-things-in-vim.rst  vim-line-numbers.rst
content/Vim/code/: example.vim
content/articles/: back-2025.md  coc-plugin.md  code-execution.md  docker-python-install-wheels.md  docker-python-install-wheels.rst  ignore-git.md  ignore-git.rst  python-function-pipelines.md  python-function-pipelines.rst  vim-line-numbers.md  vim-line-numbers.rst
content/articles/docker-python-install-wheels/: Dockerfile.big  Dockerfile.break  Dockerfile.small  Dockerfile.uninstall  Makefile
content/extra/: custom.css
content/pages/: about.md  about.rst  portfolio.md
feed/: all.atom.xml  atom.xml  rss  rss.xml  samuel-roeca.atom.xml  samuel-roeca.rss.xml  software-development.atom.xml  software-development.rss.xml
feeds/: all-en.atom.xml  all.atom.xml  announcements.atom.xml  samuel-roeca.atom.xml  samuel-roeca.rss.xml  software-development.atom.xml  vim.atom.xml
images/: test.sh
pages/: about.html  contact.html  portfolio.html
static/: custom.css
tag/: class.html  docker.html  function.html  functional-programming.html  git.html  life-updates.html  lsp.html  module.html  mypy.html  neovim.html  pip.html  pipeline.html  python.html  unix.html  vcs.html  version-control.html  vim-plugins.html  vim.html
theme/images/: readme.txt
(+3 files in other folders)
