[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pappasam.github.io"
version = "0.1.0"
description = "Samuel Roeca's personal website"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.7.1"
Markdown = "^3.3.4"
ghp-import = "^2.0.2"
GitPython = "^3.1.24"
beautifulsoup4 = "^4.10.0"
mdx_include = "^1.4.1"
typogrify = "^2.0.7"
pelican-sitemap = "^1.0.2"
pelican-neighbors = "^1.1.0"
pelican-simple-footnotes = "^1.0.2"
pelican-add-css-classes = "^1.0.4"
pelican-webassets = "^2.0.0"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
isort = ">=5.9.3"
black = ">=21.9b0"
pylint = ">=2.11.01"
docformatter = ">=1.4.0"
